--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "appwrite": "^14.0.0",
     "axios": "^1.6.8",
     "vue": "^3.4.21"
   },
