add routes, pages home, favorites

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "appwrite": "^14.0.0",
     "axios": "^1.6.8",
     "vue": "^3.4.21",
+    "vue-router": "^4.3.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
